# biaoshu

./: .gitignore
archived/: README.md  pyproject.toml
chapter_1.2.1.3/: chapter_01_1.2.1.3.1.1 自注意力机制的信息聚合原理.txt  chapter_03_1.2.1.3.1.3 层级抽象与特征层次化构建机制.txt  chapter_06_1.2.1.3.1.6 参数共享与计算效率优化原理.txt  chapter_07_1.2.1.3.2.1 自回归语言建模的无监督学习范式.txt  chapter_08_1.2.1.3.2.2 多Token预测增强目标的监督密度优化原理.txt  chapter_13_1.2.1.3.3.1 上下文窗口的理论边界与计算挑战.txt  chapter_14_1.2.1.3.3.2 位置编码在长序列建模中的扩展原理.txt  chapter_15_1.2.1.3.3.3 选择性记忆的可训练稀疏化原理.txt  chapter_16_1.2.1.3.3.4 长序列场景中的动态记忆行为解析.txt  chapter_17_1.2.1.3.3.5 层次化记忆与多粒度信息保持.txt  chapter_18_1.2.1.3.3.6 记忆更新与遗忘的自适应平衡机制.txt  (+20 more)
svg/: .agent-rule.md  .gitignore  1.2.3-1.2.7。.docx  README.md  REFACTORING.md  SYSTEM_OVERVIEW.md  advanced_svg_config.json  config_manager.py  document_splitter.py  main.py  models.py  ppt_svg_generator.py  pyproject.toml  requirements.txt  run_svg_generation.sh  svg_workflow.py  test_svg_generator.py
svg/examples/: sample.docx  test_1.2.3.1.docx
svg/ppt_output/: Auto_Scan_Import.txt
svg/prompts/: examples.txt  standard.yaml  system.txt  user.txt
svg/src/agents/: __init__.py  graph.py  state.py
svg/src/agents/edges/: __init__.py  routing.py
svg/src/agents/nodes/: __init__.py  draw_svg.py  generate_report.py  handle_error.py  initialize.py  prepare_draw.py  split_document.py
svg/src/config/: __init__.py  manager.py  standard.yaml
svg/src/prompts/: system.txt  user.txt
svg/src/tools/: __init__.py  document_splitter.py  smart_drawer.py
svg/src/utils/: __init__.py  logger.py  registry.py  visualize.py
(+143 files in other folders)
